Update package link

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ See [1] for model details and performance comparisons.
 
 [1]: Rudra, P., Shi, W. J., Vestal, B., Russell, P. H., Odell, A., Dowell, R., Radcliffe, R., Saba, L. M., & Kechris, K. *Model based heritability scores for high-throughput sequencing data*. BMC bioinformatics 18.1 (2017): 143.
 
+The package can be downloaded from CRAN https://CRAN.R-project.org/package=HeritSeq.
+
 ## Example dataset
 The **HeritSeq** package includes an example high-throughput sequencing dataset 
 called *simData*. This dataset was generated based on a recombinant inbred mice panel miRNA sequencing counts. It is an 100 by 175 matrix, containing 100 features and 175 samples. The total number of strains is 59, and the strain labels are recorded 
